-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
c3d909ec28 (qt/qtdeclarative/dev) 194ab1588c (qt/qtdeclarative/6.2) b50c76b669 (qt/qtdeclarative/6.3) 194ab1588c (qt/tqtc-qtdeclarative/6.2) b50c76b669 (qt/tqtc-qtdeclarative/6.3) c3d909ec28 (qt/tqtc-qtdeclarative/dev) 194ab1588c (qt/qtdeclarative/6.2.4)
If you call positionViewAtCell(row, Qt.AlignTop) for the last row in the table, the row will be aligned to the top of the view, as requested. But this look really wrong , since it will cause the viewport to be flicked to a position that causes it to overshoot by a distance close to the height of the whole view, effectively leaving a big empty gap at the bottom.
The expected behaviour for a TableView, is that it tries as good as possible to respect the given alignment, but without flicking the table outside the view. Instead it should clamp the flicking so that it doesn't go beyond the edges.